# splinterops-badge-fw

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  README.md  partitions_two_ota_console_log.csv  sdkconfig  sdkconfig.defaults
components/badge_hw_profile/: AppConfig.h  Badge.c  Badge.h  BadgeHwProfile.c  BadgeHwProfile.h  BadgeType.c  BadgeType.h  BadgeUuid.c  CMakeLists.txt  README.md
components/badge_hw_profile/crest/: BadgeProfile.c  BadgeProfile.h
components/badge_hw_profile/fman25/: BadgeProfile.c  BadgeProfile.h
components/badge_hw_profile/reactor/: BadgeProfile.c  BadgeProfile.h
components/badge_hw_profile/tron/: BadgeProfile.c  BadgeProfile.h
components/badge_metrics/: BadgeMetrics.c  BadgeMetrics.h  CMakeLists.txt  README.md
components/battery_sensor/: BatterySensor.c  BatterySensor.h  CMakeLists.txt  README.md
components/circular_buffer/: CMakeLists.txt  CircularBuffer.c  CircularBuffer.h  README.md
components/console_cmds/: CMakeLists.txt  README.md
components/console_cmds/badge/: console_badge.c  console_badge.h
components/console_cmds/badge_cmds/: console_badge.c
components/console_cmds/console/: Console.c  Console.h
components/console_cmds/system/: console_system.c
components/console_cmds/system_cmds/: console_system.c  console_system.h
components/disk_utilities/: CMakeLists.txt  DiskUtilities.c  DiskUtilities.h  README.md
components/game_types/: CMakeLists.txt  GameTypes.h
components/gpio_control/: CMakeLists.txt  GpioControl.c  GpioControl.h  README.md
components/hashmap/: CMakeLists.txt  README.md  hashmap.c  hashmap_base.h
components/http_request/: CMakeLists.txt  HTTPRequest.c  HTTPRequest.h  README.md
components/json_utils/: CMakeLists.txt  JsonUtils.c  README.md
components/mutex/: CMakeLists.txt  Mutex.c  README.md
components/notification_dispatcher/: CMakeLists.txt  NotificationDispatcher.c  NotificationDispatcher.h  README.md
components/ota/: CMakeLists.txt  OtaUpdate.c  OtaUpdate.h  README.md
components/piezo_music/: CMakeLists.txt  Notes.c  README.md  Songs.c
components/piezo_music/songs/: BoleroOfFire.c  BonusBonus.c  ChestSound.c  EponasSong.c  Margaritaville.c  RequiemOfSpirit.c  RightRound.c  SecretSound.c  SongOfStorms.c  SuccessSound.c  ZeldaTheme.c
components/time_utils/: CMakeLists.txt  README.md  TimeUtils.c  TimeUtils.h
components/touch_actions/: CMakeLists.txt  README.md  TouchActions.c  TouchActions.h
components/touch_sensor/: CMakeLists.txt  README.md  TouchSensor.c  TouchSensor.h
components/user_settings/: CMakeLists.txt  README.md  UserSettings.c  UserSettings.h
components/utilities/: CMakeLists.txt  README.md  Utilities.c  Utilities.h
components/vector/: CMakeLists.txt  README.md  Vector.c  Vector.h
components/wifi_client/: CMakeLists.txt  README.md  WifiClient.h  WifiSettings.h
docs/html/: _app_main_8c.html  _app_main_8c.js  _badge_stats_8c.html  _badge_stats_8c.js  _battery_sensor_8c.html  _battery_sensor_8c.js  _ble_control_8c.html  _ble_control_8c.js  _ble_control___adv_scan_8c.html  _ble_control___adv_scan_8c.js  _ble_control___service_8c.html  _ble_control___service_8c.js  _ble_control___service_char___file_transfer_8c.html  _ble_control___service_char___file_transfer_8c.js  _ble_control___service_char___interactive_game_8c.html  _ble_control___service_char___interactive_game_8c.js  _ble_spec_8c.html  _bolero_of_fire_8c.html  _bolero_of_fire_8c.js  _bonus_8c.html  _bonus_8c.js  _bonus_bonus_8c.html  _bonus_bonus_8c.js  _chest_sound_8c.html  _chest_sound_8c.js  _circular_buffer_8c.html  _circular_buffer_8c.js  _console_8c.html  _console_8c.js  _d_o_c_u_m_e_n_t_a_t_i_o_n_8md.html  _disk_utilities_8c.html  _disk_utilities_8c.js  _eponas_song_8c.html  _eponas_song_8c.js  _fanfare_8c.html  _fanfare_8c.js  _game_state_8c.html  _game_state_8c.js  _gpio_control_8c.html  _gpio_control_8c.js  (+142 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  (+80 more)
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  idf_component.yml
main/inc/: AudioPlayer.h  AudioUtils.h  BadgeStats.h  BatterySensor.h  BleControl.h  BleControl_AdvScan.h  BleControl_Service.h  BleControl_ServiceChar_FileTransfer.h  BleControl_ServiceChar_InteractiveGame.h  BleSpec.h  CircularBuffer.h  Console.h  DiscUtils.h  DiskDefines.h  DiskUtilities.h  GameState.h  GameTypes.h  GpioControl.h  HTTPGameClient.h  InteractiveGame.h  JsonUtils.h  LedControl.h  LedModing.h  LedSequences.h  Mutex.h  Notes.h  NotificationDispatcher.h  NotificationEvents.h  Ocarina.h  OcarinaSongKeys.h  OtaUpdate.h  Song.h  SynthMode.h  SynthModeNotifications.h  SystemState.h  TaskPriorities.h  TimeUtils.h  TouchActions.h  TouchSensor.h  UserSettings.h  (+4 more)
main/src/: AppMain.c  AudioPlayer.c  BadgeStats.c  BatterySensor.c  BleControl.c  BleControl_AdvScan.c  BleControl_Service.c  BleControl_ServiceChar_FileTransfer.c  BleControl_ServiceChar_InteractiveGame.c  BleSpec.c  CircularBuffer.c  Console.c  DiscUtils.c  DiskUtilities.c  GameState.c  GpioControl.c  HTTPGameClient.c  JsonUtils.c  LedControl.c  LedModing.c  LedSequences.c  Mutex.c  Notes.c  NotificationDispatcher.c  Ocarina.c  OtaUpdate.c  Songs.c  SynthMode.c  SystemState.c  TimeUtils.c  TouchActions.c  TouchSensor.c  UserSettings.c  Utilities.c  WifiClient.c  hashmap.c
main/src/songs/: BoleroOfFire.c  Bonus.c  BonusBonus.c  ChestSound.c  EponasSong.c  Fanfare.c  Margaritaville.c  MinuetOfForest.c  NocturneOfShadow.c  PreludeOfLight.c  RequiemOfSpirit.c  RightRound.c  SariasSong.c  SecretSound.c  SerenadeOfWater.c  SongOfStorms.c  SongOfTime.c  SongSuccess.c  SuccessSound.c  SunsSong.c  ZeldaOpening.c  ZeldaTheme.c  ZeldaThemeCrap.c  ZeldasLullaby.c
